# dio-projetos-python

analise__de_dados_python_pandas/: README.md  analise_exploratoria_pandas.ipynb
analise__de_dados_python_pandas/sheets/: Rio de Janeiro.xlsx  Santa Catarina.xlsx  São Paulo.xlsx
consumindo_a_api_do_twitter_com_python/: README.md  docker-compose.yml  pyproject.toml  setup.cfg
consumindo_a_api_do_twitter_com_python/src/: secrets.py
criando_api_flask_ambiente_colab/: README.md  api_flask_colab  api_flask_colab.ipynb  api_flask_colab.py
criando_sistema_bancario_python/: README.md
descomplicando_a_criacao_de_pacotes_de_processamento_de_imagens_em_python/: README.md  requirements.txt  setup.py
desenv_rest_apis_em_python_e_ flask/api_atividades_v3/: app.py  atividades.db  models.py  requeriments.txt  utils.py
desenv_rest_apis_em_python_e_ flask/desenv_rest_apis_em_python_e_ flask/: .gitignore  atividades.db  requeriments.txt
desenv_rest_apis_em_python_e_ flask/dev_api/: app.py  habilidades.py  requeriments.txt
desenv_rest_apis_em_python_e_ flask/ola_flask/: ola_mundo.py
desenv_rest_apis_em_python_e_ flask/primeira_api/: app.py
desenv_web_com_python_e_django/: • DJANGO-ADMIN - É o utilitário de .txt
integrando_python_sqlIite_mongo/: README.md  integration_mongodb.py  integration_sqlite.py
modelando_sistema_bancário_poo _python/: README.md  modelando_sistema_bancário_poo _python_v1.py  modelando_sistema_bancário_poo _python_v2.py
otimizando_sistema_bancario/: README.md  otimizando_sistema_bancario.py
(+22 files in other folders)
