[tool.poetry]
name = "consumindo-a-api-do-twitter-com-python"
version = "1.0.0"
description = "api_twitter_python"
authors = ["Renato Moreira"]
readme = "README.md"
packages = [{include = "consumindo_a_api_do_twitter_com_python"}]

[tool.poetry.dependencies]
python = "^3.11"
tweepy = "^4.14.0"
pymongo = "^4.4.1"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
